--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "baseui": "^15.0.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "styletron-engine-monolithic": "^1.0.0",
-    "styletron-react": "^6.1.1"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
