--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     },
     "dependencies": {
         "@base-ui-components/react": "^1.0.0-beta.1",
+        "baseui": "^15.0.0",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "styletron-engine-atomic": "^1.6.2",
+        "styletron-react": "^6.1.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
