chore(tsconfig): set module to es2020 and enable esModuleInterop for Vite/React compatibility

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2015",
+    "module": "es2020",
+    "esModuleInterop": true,
     "types": ["vitest/globals"]
   },
   "files": [],
