--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     },
     "dependencies": {
         "@base-ui-components/react": "^1.0.0-beta.1",
+        "@sentry/react": "^9.40.0",
         "baseui": "^15.0.0",
+        "plausible-tracker": "^0.3.9",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "styletron-engine-atomic": "^1.6.2",
